--- a/src/vppinfra.am
+++ b/src/vppinfra.am
@@ -13,7 +13,9 @@
 
 lib_LTLIBRARIES += libvppinfra.la
 
-TESTS =
+TESTS = test_cuckoo_template \
+        test_bihash_template \
+	test_cuckoo_bihash
 
 if ENABLE_TESTS
 TESTS  +=  test_bihash_template \
@@ -48,6 +50,8 @@ noinst_PROGRAMS = $(TESTS)
 check_PROGRAMS	= $(TESTS)
 
 test_bihash_template_SOURCES = vppinfra/test_bihash_template.c
+test_cuckoo_template_SOURCES = vppinfra/test_cuckoo_template.c
+test_cuckoo_bihash_SOURCES = vppinfra/test_cuckoo_bihash.c
 test_dlist_SOURCES = vppinfra/test_dlist.c
 test_elog_SOURCES = vppinfra/test_elog.c
 test_elf_SOURCES = vppinfra/test_elf.c
@@ -75,6 +79,8 @@ test_zvec_SOURCES = vppinfra/test_zvec.c
 # All unit tests use ASSERT for failure
 # So we'll need -DDEBUG to enable ASSERTs
 test_bihash_template_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
+test_cuckoo_template_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
+test_cuckoo_bihash_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
 test_dlist_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
 test_elog_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
 test_elf_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
@@ -100,6 +106,8 @@ test_vec_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
 test_zvec_CPPFLAGS =	$(AM_CPPFLAGS) -DCLIB_DEBUG
 
 test_bihash_template_LDADD =	libvppinfra.la
+test_cuckoo_template_LDADD =	libvppinfra.la
+test_cuckoo_bihash_LDADD =	libvppinfra.la
 test_dlist_LDADD =	libvppinfra.la
 test_elog_LDADD =	libvppinfra.la
 test_elf_LDADD =	libvppinfra.la
@@ -125,6 +133,8 @@ test_vec_LDADD =	libvppinfra.la
 test_zvec_LDADD =	libvppinfra.la
 
 test_bihash_template_LDFLAGS = -static
+test_cuckoo_template_LDFLAGS = -static
+test_cuckoo_bihash_LDFLAGS = -static -lpthread
 test_dlist_LDFLAGS = -static
 test_elog_LDFLAGS = -static
 test_elf_LDFLAGS = -static
