--- a/dpdk/Makefile
+++ b/dpdk/Makefile
@@ -33,6 +33,12 @@ DPDK_17.02_TARBALL_MD5_CKSUM := 6b9f7387c35641f4e8dbba3e528f2376
 DPDK_17.05_TARBALL_MD5_CKSUM := 0a68c31cd6a6cabeed0a4331073e4c05
 DPDK_SOURCE := $(B)/dpdk-$(DPDK_VERSION)
 
+ifeq ($(MACHINE),$(filter $(MACHINE),x86_64))
+AESNI := y
+else
+AESNI := n
+endif
+
 IPSEC_MB_VER := 0.45
 AESNIMB_LIB_TARBALL := v$(IPSEC_MB_VER).tar.gz
 AESNIMB_LIB_TARBALL_URL := http://github.com/01org/intel-ipsec-mb/archive/$(AESNIMB_LIB_TARBALL)
@@ -52,12 +58,6 @@ DPDK_CC=gcc
 endif
 
 MACHINE=$(shell uname -m)
-
-ifeq ($(MACHINE),$(filter $(MACHINE),x86_64))
-AESNI := y
-else
-AESNI := n
-endif
 
 ##############################################################################
 # Intel x86
@@ -195,11 +195,13 @@ download: $(B)/.download.ok
 $(B)/.extract.ok: $(B)/.download.ok
 	@echo --- extracting $(DPDK_TARBALL) ---
 	@tar --directory $(B) --extract --file $(CURDIR)/$(DPDK_TARBALL)
+ifeq ($(AESNI),y)
 	@echo --- extracting $(AESNIMB_LIB_TARBALL) ---
 	@tar --directory $(B) --extract --file $(CURDIR)/$(AESNIMB_LIB_TARBALL)
 	@echo --- extracting $(ISA_L_CRYPTO_LIB_TARBALL) ---
 	@tar --directory $(B) --extract --file $(CURDIR)/$(ISA_L_CRYPTO_LIB_TARBALL)
 	@touch $@
+endif
 
 .PHONY: extract
 extract: $(B)/.extract.ok
@@ -225,7 +227,11 @@ $(B)/.config.ok: $(B)/.patch.ok $(B)/custom-config
 config: $(B)/.config.ok
 
 # Order matters
+ifeq ($(AESNI),y)
 BUILD_TARGETS += build-ipsec-mb build-isal-crypto build-dpdk
+else
+BUILD_TARGETS += build-dpdk
+endif
 
 .PHONY: build-ipsec-mb
 build-ipsec-mb:
