SNAT: IP fragmentation (VPP-890)
Translation of fragmented packets.

Change-Id: I9b1f2e9433ce273638080f32c2d3bff39c49899d
Signed-off-by: Matus Fabian <matfabia@cisco.com>

--- a/src/plugins/snat.am
+++ b/src/plugins/snat.am
@@ -22,6 +22,7 @@ snat_plugin_la_SOURCES = snat/snat.c		\
 	snat/snat_plugin.api.h			\
         snat/snat_ipfix_logging.c		\
         snat/snat_det.c               		\
+        snat/snat_reass.c             		\
         snat/nat64.c                  		\
         snat/nat64_cli.c              		\
         snat/nat64_in2out.c           		\
