make test: test against vpp with multiple workers
Besides running tests as usual, introduce a second run vs vpp
configured with multiple worker threads. Use cpu_count - 2 worker
threads, maximum 8 - otherwise ACL plugin causes vpp to abort at start.
Mark tests which fail and/or coredump when run against vpp with
multiple workers so that they are skipped for now.

Change-Id: I8c490b30db4f07da415f19cc4af9c0da5329832e
Signed-off-by: Klement Sekera <ksekera@cisco.com>

--- a/test/Makefile
+++ b/test/Makefile
@@ -86,7 +86,10 @@ $(PAPI_INSTALL_DONE): $(PIP_PATCH_DONE)
 	@touch $@
 
 define retest-func
+	@echo "Running tests against single-thread VPP..."
 	@env VPP_TEST_FAILED_DIR=$(VPP_TEST_FAILED_DIR) scripts/setsid_wrapper.sh $(FORCE_FOREGROUND) $(PYTHON_VENV_PATH)/bin/activate python run_tests.py -d $(TEST_DIR) $(UNITTEST_EXTRA_OPTS)
+	@echo "Running tests against VPP with multiple workers..."
+	@env VPP_TEST_FAILED_DIR=$(VPP_TEST_FAILED_DIR) VPP_TEST_MULTI_WORKER=yes scripts/setsid_wrapper.sh $(FORCE_FOREGROUND) $(PYTHON_VENV_PATH)/bin/activate python run_tests.py -d $(TEST_DIR) $(UNITTEST_EXTRA_OPTS)
 	@env VPP_TEST_FAILED_DIR=$(VPP_TEST_FAILED_DIR) scripts/compress_failed.sh
 endef
 
