Fix missing binaries and headers in build-root/install-vpp*
Change-Id: Ided82d8eedf1054cbf19ef9061dadc464411ba7b
Signed-off-by: tjanciga <tomas.janciga@pantheon.tech>

--- a/src/uri.am
+++ b/src/uri.am
@@ -34,7 +34,9 @@ noinst_PROGRAMS +=				\
 	uri_udp_test				\
 	uri_tcp_test				\
 	uri_socket_test				\
-	uri_socket_server			\
+	uri_socket_server
+
+bin_PROGRAMS +=					\
 	vcl_test_server				\
 	vcl_test_client				\
 	sock_test_server			\
