Experimenting with ASan in CI.
Change-Id: I48f4ad43224bceb62618bc29eb40b918f406c861
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -171,6 +171,9 @@ set(VPP_SANITIZE_ADDR_OPTIONS
 if (VPP_ENABLE_SANITIZE_ADDR)
   add_compile_options(-fsanitize=address)
   add_link_options(-fsanitize=address)
+  pr("Asan options DO apply.")
+else ()
+  pr("Asan options NOT applied.")
 endif (VPP_ENABLE_SANITIZE_ADDR)
 
 ##############################################################################
